# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt
Editor/src/: Editor.cpp  Editor.h  Game.cpp  Game.h
Editor/src/components/: Car.cpp
Editor/src/logger/: EditorLogger.cpp  EditorLogger.h
TestGame/: CMakeLists.txt
TestGame/src/: Editor.cpp  Editor.h  Game.cpp  Game.h  main.cpp
TestGame/src/components/: Car.h
TestGame/src/systems/: EntitySystem.cpp  EntitySystem.h
data/shaders/: compile_shaders.cmd
data/shaders/default/: shader.frag  shader.vert
data/shaders/phong/: shader.frag  shader.vert
src/: Application.cpp  Application.h  Vertex.cpp  Vertex.h  main.cpp  pch.h
src/components/: Actor.cpp  Actor.h  Camera.h  Car.h  Material.cpp  Material.h  Mesh.h  MeshAttribute.h  Name.cpp  Name.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Relationship.cpp  Relationship.h  Texture.h  Transform.cpp  Transform.h
src/io/: AssetsManager.cpp  AssetsManager.h  Input.cpp  Input.h  MeshData.h  Model.h  NodeData.h  PrimitiveData.cpp  PrimitiveData.h
src/logger/: Logger.h  TerminalLogger.cpp  TerminalLogger.h
src/renderer/: Renderer.h
src/renderer/vulkan/: VkMaterial.cpp  VkMaterial.h  VkRenderer.cpp  VkRenderer.h  VkTexture.cpp  VkTexture.h  VkTransform.cpp  VkTransform.h
src/renderer/window/: Window.h  (+3 more)
src/systems/: EntitySystem.cpp  EntitySystem.h  PerspectiveCameraSystem.cpp  PerspectiveCameraSystem.h  System.h  SystemsManager.cpp  SystemsManager.h
src/ui/: Widget.h  imgui.cpp  imgui.h  ui.cpp  ui.h
tests/: main.cpp  ui.cpp
